--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -11,3 +11,7 @@
 /* Components */
 @import 'cmps/app-header.css';
 @import 'cmps/user-msg.css';
+@import 'cmps/book-card.css';
+@import 'cmps/book-list.css';
+@import 'cmps/search-bar-container.css';
+@import 'cmps/side-bar.css';
