--- a/assets/style/setup/vars.css
+++ b/assets/style/setup/vars.css
@@ -1,8 +1,8 @@
 :root {
-  --clr1: rgb(96, 107, 91);
-  --clr2: rgb(120, 99, 110);
+  /* --clr1: rgb(96, 107, 91);
+  --clr2: rgb(120, 99, 110); */
 
-  --clr1bg: rgb(153, 166, 149);
+  --clr1bg: #66738b;
   --clr1bg-light: rgb(205, 221, 200);
   --clr2bg: rgb(233, 206, 221);
   --clr2bg-light: rgb(247, 185, 219);
@@ -11,4 +11,8 @@
   --gray2: rgb(155, 155, 155);
   --gray3: rgb(44, 44, 44);
 
+  --clr1: #f9f2ea;
+  --clr2: #76ABAE;
+
+  --white1: 	rgb(245, 245, 245);
 } 
