--- a/assets/style/base/layout.css
+++ b/assets/style/base/layout.css
@@ -1,7 +1,36 @@
 .main-layout {
   margin: 0 auto;
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
+  display: grid;
+  grid-template-columns: 115px auto 115px;
+}
+
+.main-layout > :not(.full) {
+  grid-column: 2;
+}
+
+.main-layout > .full {
+  grid-column: 1 / -1;
+}
+
+.content-layout {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 3.5fr;
+  gap: 2rem;
+}
+
+.book-layout {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+}
+
+.car-list {
+  grid-column: 2;
+}
+aside{
+  grid-row: 1 / 3;
+  
 }
 
 .container {
