--- a/assets/style/base/layout.css
+++ b/assets/style/base/layout.css
@@ -1,7 +1,7 @@
 .main-layout {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 115px auto 115px;
+  grid-template-columns: 1fr auto 1fr;
 }
 
 .main-layout > :not(.full) {
@@ -13,15 +13,15 @@
 }
 
 .content-layout {
-  width: 100%;
+  /* width: 100%; */
   display: grid;
-  grid-template-columns: 1fr 3.5fr;
+  grid-template-columns: 350px  auto;
   gap: 2rem;
 }
 
 .book-layout {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, minmax(min-content, 300px));
   gap: 40px;
 }
 
@@ -37,5 +37,3 @@ aside{
   padding: 1em;
   margin: auto;
 }
-
-
